--- a/estilos/style.css
+++ b/estilos/style.css
@@ -17,6 +17,7 @@ body{
     background-size: cover;
     background-attachment: fixed;
     margin: 0px;
+    
 }
 
 main {
@@ -36,3 +37,12 @@ section#telefone {
    background: url('../imagens/frame-iphone.png') no-repeat;
 
 }
+
+iframe#tela {
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 270px;
+    height: 471px;
+}
+
